--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "emailjs": "^4.0.1",
     "firebase": "^9.22.0",
     "firebase-admin": "^11.7.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-animation-on-scroll": "^5.1.0",
     "react-dom": "^18.2.0",
